--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,13 @@
         "symfony/intl": "6.0.*",
         "symfony/mailer": "6.0.*",
         "symfony/mime": "6.0.*",
-        "symfony/monolog-bundle": "^3.0",
+        "symfony/monolog-bundle": "^3.8",
         "symfony/notifier": "6.0.*",
         "symfony/process": "6.0.*",
         "symfony/property-access": "6.0.*",
         "symfony/property-info": "6.0.*",
         "symfony/proxy-manager-bridge": "6.0.*",
+        "symfony/rate-limiter": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/security-bundle": "6.0.*",
         "symfony/serializer": "6.0.*",
@@ -43,7 +44,8 @@
         "symfony/webpack-encore-bundle": "^1.15",
         "symfony/yaml": "6.0.*",
         "symfonycasts/verify-email-bundle": "^1.11",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/cssinliner-extra": "^3.4",
+        "twig/extra-bundle": "^3.4",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
