--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -1,10 +1,17 @@
 monolog:
     channels:
+        - loginsubscriber
         - deprecation # Deprecations are logged in the dedicated "deprecation" channel when it exists
 
 when@dev:
     monolog:
         handlers:
+            login_subscriber:
+                type: stream
+                path: "%kernel.logs_dir%/%kernel.environment%/loginSubscriber.log"
+                level: debug
+                channels: ['loginsubscriber']
+
             main:
                 type: stream
                 path: "%kernel.logs_dir%/%kernel.environment%.log"
