--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,17 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            login_throttling:
+                max_attempts: 5
+                interval: '5 minutes'
+
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                enable_csrf: true
+
+            logout:
+                path: app_logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -25,6 +36,12 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
+    role_hierarchy:
+        ROLE_USER: ROLE_USER
+        ROLE_MANAGE: [ ROLE_MANAGER, ROLE_USER ]
+        ROLE_ADMIN: [ ROLE_MANAGER, ROLE_ADMIN ]
+        ROLE_CEO: [ ROLE_ADMIN, ROLE_CEO ]
+
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
