--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
 ###> symfony/mailer ###
   mailer:
     image: schickling/mailcatcher
-    ports: [1025, 1080]
+    ports: [ "1025", "1080" ]
 ###< symfony/mailer ###
 
